--- a/work_blog/templates/404.html
+++ b/work_blog/templates/404.html
@@ -8,5 +8,7 @@
 {% block nav_home_active %}active{% endblock %}
 
 {% block content %}
-    404，找不到页面！迷路啦？
+    <div class="page-not-found">
+        404，找不到页面！迷路啦？
+    </div>
 {% endblock content %}
