--- a/work_blog/templates/500.html
+++ b/work_blog/templates/500.html
@@ -8,5 +8,7 @@
 {% block nav_home_active %}active{% endblock %}
 
 {% block content %}
-    500，发生错误！我已经发送邮件给管理员啦！
+    <div class="page-error">
+        500，发生错误！我已经发送邮件给管理员啦！
+    </div>
 {% endblock content %}
