--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -13,7 +13,7 @@
     <script src="{% static 'bootstrap-3.3.7/js/bootstrap.min.js' %}" type="text/javascript"></script>
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="{% url 'home' %}" class="navbar-brand">个人博客网站</a>
@@ -36,6 +36,7 @@
                         </a>
                     </li>
                 </ul>
+
                 <ul class="nav navbar-nav navbar-right">
                     {% if not user.is_authenticated %}
                         <li class="{% block nav_login_active %}{% endblock %}">
@@ -83,6 +84,13 @@
                         </li>
                     {% endif %}
                 </ul>
+
+                <!-- 搜索功能框 -->
+                <div class="navbar-form navbar-right">
+                    <input id="search_keywords" type="text" class="form-control" data-value="blog" value="" placeholder="请输入搜索内容">
+                    <button id="jsSearchBtn" type="submit" class="btn btn-default">Go</button>
+                </div>
+
             </div>
         </div>
     </div>
@@ -162,6 +170,20 @@
                 }
             });
         });
+
+        //顶部搜索栏搜索方法
+        function search_click(){
+            var keywords = $('#search_keywords').val(),
+                request_url = "/blog/?keywords="+keywords;
+            if(keywords == ""){
+                return
+            }
+            window.location.href = request_url
+        }
+        $('#jsSearchBtn').on('click',function(){
+            search_click()
+        });
+
     </script>
 
 {% block custom_js %}{% endblock custom_js %}
