--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -90,9 +90,10 @@
                         {% get_comment_list blog as comments %}
                         {% for comment in comments %}
                             <div id="root_{{ comment.pk }}" class="comment">
+                                <span style="color: #192f0a; font-weight:bold; font-style:italic; font-size:18px;">By</span>
                                 <span>{{ comment.user.get_nickname_or_username }}</span>
                                 <span>({{ comment.comment_time|date:'Y-m-d G:i:s' }}):</span>
-                                <div id="comment_{{ comment.pk }}">
+                                <div id="comment_{{ comment.pk }}" class="blog-comment">
                                     {{ comment.text|safe }}
                                 </div>
                                 <div class="like" onclick="LikeChange(this, '{% get_content_type comment %}', {{ comment.pk }})">
@@ -108,7 +109,7 @@
                                         <span>({{ reply.comment_time|date:'Y-m-d G:i:s' }})</span>
                                         <span>回复</span>
                                         <span>{{ reply.reply_to.get_nickname_or_username }}</span>
-                                        <div id="comment_{{ reply.pk }}">
+                                        <div id="comment_{{ reply.pk }}" class="reply-comment">
                                             {{ reply.text|safe }}
                                         </div>
                                         <div class="like" onclick="LikeChange(this, '{% get_content_type reply %}', {{ reply.pk }})">
