--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -7,8 +7,7 @@
 
 {% block custom_css %}
     <link rel="stylesheet" type="text/css" href="{% static 'blog.css' %}">
-    <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
-    <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'monokai.css' %}">
 {% endblock custom_css %}
 
 {% block content %}
@@ -273,4 +272,8 @@
         }
 
     </script>
+    <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+    <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
+    <script type="text/javascript" src="{% static "highlight.pack.js" %}"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 {% endblock custom_js %}
