--- a/work_blog/templates/add_blog.html
+++ b/work_blog/templates/add_blog.html
@@ -4,14 +4,55 @@
     增加新博客
 {% endblock title %}
 
-{% block custom_css %}
-
-{% endblock custom_css %}
-
+ 
 {% block content %}
-
+    <form id="blog_form" action="" methord="POST">
+        {% csrf_token %}
+        <div class="input-group">
+            <span id="blog_title_label" class="input-group-addon">博文标题</span>
+            <input id="blog_title" name="blog_title" type="text" class="form-control" placeholder="请写入不超过50个字符的标题">
+        </div>
+ 
+        <div class="input-group">
+            <span id="tag-list-label" class="input-group-addon">分类标签</span>
+            <div class="tag-list">
+                <ul style="overflow: hidden;">
+                    <li class="tag-recommend">
+                        <input id="recommend" type="checkbox" name="recommend" />
+                        <label for="recommend">推荐</label>
+                    </li>
+ 
+                    {% for tag in tags %}
+                    <li>
+                        <input id="tag_{{tag.id}}" type="checkbox" name="tag" value="{{tag.id}}" />
+                        <label for="tag_{{tag.id}}">{{tag.tag_name}}</label>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+ 
+        <!--用于提交UEditor内容-->
+        <input id="content" name="content" type="hidden">
+    </form>
+ 
+    <div style="min-height:600px">
+        <script id="editor" type="text/plain" style="width:100%;height:500px;"></script>
+    </div>
+    
+    <div style="text-align:right;">
+        <span class="tip-text"></span>
+        <a id="blog_submit" class="btn btn-primary" href="javascript:void(0);">发表博客</a>
+    </div>
 {% endblock content %}
 
 {% block custom_js %}
-
+    <script type="text/javascript" src="/ueditor/UE/ueditor.config.js"></script>
+    <script type="text/javascript" src="/ueditor/UE/ueditor.all.min.js"></script>
+    <script type="text/javascript" src="/ueditor/UE/lang/zh-cn/zh-cn.js"></script>
+ 
+    <script type="text/javascript">
+        var ue = UE.getEditor('editor');
+    </script>
 {% endblock custom_js %}
