--- a/work_blog/static/brown_paper.css
+++ b/work_blog/static/brown_paper.css
@@ -1,61 +1,44 @@
 /*
-Monokai style - ported by Luigi Maselli - http://grigio.org
+
+Brown Paper style from goldblog.com.ua (c) Zaripov Yura <yur4ik7@ukr.net>
+
 */
 
 .hljs {
   display: block; padding: 0.5em;
-  background: #272822;
+  background:#b7a68e url(/static/brown_papersq.png);
 }
 
-.hljs-tag,
-.hljs-tag .hljs-title,
 .hljs-keyword,
 .hljs-literal,
-.hljs-strong,
 .hljs-change,
 .hljs-winutils,
 .hljs-flow,
 .lisp .hljs-title,
 .clojure .hljs-built_in,
 .nginx .hljs-title,
-.tex .hljs-special {
-  color: #F92672;
+.tex .hljs-special,
+.hljs-request,
+.hljs-status {
+  color:#005599;
+  font-weight:bold;
 }
 
-.hljs {
-  color: #DDD;
-}
-
-.hljs .hljs-constant,
-.asciidoc .hljs-code {
-	color: #66D9EF;
-}
-
-.hljs-code,
-.hljs-class .hljs-title,
-.hljs-header {
-	color: white;
-}
-
-.hljs-link_label,
-.hljs-attribute,
-.hljs-symbol,
-.hljs-symbol .hljs-string,
-.hljs-value,
-.hljs-regexp {
-	color: #BF79DB;
-}
-
-.hljs-link_url,
-.hljs-tag .hljs-value,
-.hljs-string,
-.hljs-bullet,
+.hljs,
 .hljs-subst,
+.hljs-tag .hljs-keyword {
+  color: #363C69;
+}
+
+.hljs-string,
 .hljs-title,
-.hljs-emphasis,
 .haskell .hljs-type,
+.hljs-tag .hljs-value,
+.css .hljs-rules .hljs-value,
 .hljs-preprocessor,
 .hljs-pragma,
+.ruby .hljs-symbol,
+.ruby .hljs-symbol .hljs-string,
 .ruby .hljs-class .hljs-parent,
 .hljs-built_in,
 .sql .hljs-aggregate,
@@ -63,6 +46,7 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .django .hljs-variable,
 .smalltalk .hljs-class,
 .hljs-javadoc,
+.ruby .hljs-string,
 .django .hljs-filter .hljs-argument,
 .smalltalk .hljs-localvars,
 .smalltalk .hljs-array,
@@ -73,16 +57,12 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .hljs-envvar,
 .apache .hljs-tag,
 .apache .hljs-cbracket,
-.tex .hljs-command,
-.hljs-prompt {
-  color: #A6E22E;
+.tex .hljs-number {
+  color: #2C009F;
 }
 
 .hljs-comment,
 .java .hljs-annotation,
-.smartquote,
-.hljs-blockquote,
-.hljs-horizontal_rule,
 .python .hljs-decorator,
 .hljs-template_comment,
 .hljs-pi,
@@ -90,8 +70,9 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .hljs-deletion,
 .hljs-shebang,
 .apache .hljs-sqbracket,
+.nginx .hljs-built_in,
 .tex .hljs-formula {
-  color: #75715E;
+  color: #802022;
 }
 
 .hljs-keyword,
@@ -99,7 +80,6 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .css .hljs-id,
 .hljs-phpdoc,
 .hljs-title,
-.hljs-header,
 .haskell .hljs-type,
 .vbscript .hljs-built_in,
 .sql .hljs-aggregate,
@@ -110,9 +90,7 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .hljs-winutils,
 .bash .hljs-variable,
 .apache .hljs-tag,
-.tex .hljs-special,
-.hljs-request,
-.hljs-status {
+.tex .hljs-command {
   font-weight: bold;
 }
 
@@ -123,5 +101,5 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
 .xml .vbscript,
 .xml .css,
 .xml .hljs-cdata {
-  opacity: 0.5;
+  opacity: 0.8;
 }
