--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -7,7 +7,7 @@
 
 {% block custom_css %}
     <link rel="stylesheet" type="text/css" href="{% static 'blog.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'monokai.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'brown_paper.css' %}">
 {% endblock custom_css %}
 
 {% block content %}
