--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -11,7 +11,7 @@
 {% endblock custom_css %}
 
 {% block content %}
-    <div class="container">
+    <div id="blog_container" class="container">
         <div class="raw">
             <div class="col-xs-10 col-xs-offset-1">
                 <h3>{{ blog.title }}</h3>
@@ -22,6 +22,14 @@
                         <a href="{% url 'blog:blogs_type' blog.blog_type.id %}"> 
                             {{ blog.blog_type }}
                         </a>
+                    </li>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <li>标签：
+                        {% for blog_tag in blog.tag.all %}
+                            <a href="{% url 'blog:blogs_tags' blog_tag.id %}">
+                                {{ blog_tag.name }}
+                            </a>
+                        {% endfor %}
                     </li>
                     &nbsp;&nbsp;&nbsp;&nbsp;
                     <li>发表日期：{{ blog.create_time|date:'Y-m-d G:i:s' }}</li>
