--- a/work_blog/templates/home.html
+++ b/work_blog/templates/home.html
@@ -13,16 +13,71 @@
 {% block nav_home_active %}active{% endblock %}
 
 {% block content %}
-    <h3 class="home-content">欢迎访问我的博客网站，随便看吧！</h3>
-    <!-- 图表容器 DOM -->
-    <div id="container"></div>
-    <div class="container">
+    <div class="body-header">
+        <h3 class="home-content">欢迎访问我的博客网站，随便看吧！</h3>
+    </div>
+    <div id="home_container1" class="container">
+        <div class="content-item">
+            <h3 class="content-item-title">
+                <span class="glyphicon glyphicon-pencil"></span>
+                <span style="font-size: 28px; font-weight: bolder">博客</span>
+                &nbsp;&nbsp;
+                <span>共有{{ blog_nums }}篇博客</span>
+                <span><a href="{% url 'blog:blog_list' %}">more>>></a></span>
+            </h3>
+            <div class="raw">
+                <div class="col-sm-4">
+                    <div class="home-category">
+                        <h4 class="home-category-title">博客分类</h4>
+
+                        <ul class="list">
+                            {% for blog_type in blog_types %}
+                                <li class="panel-detail">
+                                    <a href="{% url 'blog:blogs_type' blog_type.id %}">
+                                        {{ blog_type.type_name }}({{ blog_type.blog_set.count }}篇)
+                                    </a>
+                                </li>
+                            {% empty %}
+                                <li>暂无分类</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active">
+                            <a href="#home" aria-controls="home" role="tab" data-toggle="tab" style="font-size: 18px">趋势图</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" style="font-size: 18px">Profile</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab" style="font-size: 18px">Messages</a>
+                        </li>
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="home">
+                            <!-- 图表容器 DOM -->
+                            <div id="container"></div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="profile">暂无内容</div>
+                        <div role="tabpanel" class="tab-pane" id="messages">暂无内容</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="raw"></div>
+        </div>
+    </div>
+    <div id="home_container2" class="container">
         <div class="content-item">
             <h3 class="content-item-title">
                 <span class="glyphicon glyphicon-fire"></span>
-                <span>热读榜</span>
+                <span style="font-size: 28px; font-weight: bolder">热读榜</span>
             </h3>
-            <div class="row">
+            <div class="raw">
                 <div class="col-sm-4 hot-data">
                     <div class="home-block">
                         <!-- 今天24小时内的热门博客 -->
@@ -30,7 +85,8 @@
                         <ul class="list">
                             {% for hot_data in today_HotData %}
                                 <li>
-                                    <a href="{% url 'blog:blog_detail' hot_data.object_id %}" target="_blank">{{ hot_data.content_object.title }}</a>
+                                    <a href="{% url 'blog:blog_detail' hot_data.object_id %}"
+                                       target="_blank">{{ hot_data.content_object.title }}</a>
                                     ({{ hot_data.read_num }})
                                 </li>
                             {% empty %}
@@ -46,7 +102,8 @@
                         <ul class="list">
                             {% for hot_data in yesterday_HotData %}
                                 <li>
-                                    <a href="{% url 'blog:blog_detail' hot_data.object_id %}" target="_blank">{{ hot_data.content_object.title }}</a>
+                                    <a href="{% url 'blog:blog_detail' hot_data.object_id %}"
+                                       target="_blank">{{ hot_data.content_object.title }}</a>
                                     ({{ hot_data.read_num }})
                                 </li>
                             {% empty %}
@@ -61,7 +118,8 @@
                         <h4 class="home-block-title">7天阅读热榜</h4>
                         <ul class="list">
                             {% for hot_blog in seven_day_HotBlog %}
-                                <li><a href="{% url 'blog:blog_detail' hot_blog.id %}" target="_blank">{{ hot_blog.title }}</a>
+                                <li><a href="{% url 'blog:blog_detail' hot_blog.id %}"
+                                       target="_blank">{{ hot_blog.title }}</a>
                                     ({{ hot_blog.read_num_sum }})
                                 </li>
                             {% empty %}
