--- a/work_blog/templates/form.html
+++ b/work_blog/templates/form.html
@@ -8,7 +8,7 @@
 {% block nav_login_active %}active{% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div id="forget_container" class="container">
         <div class="raw">
             <div class="col-xs-4 col-xs-offset-4">
                     <div class="panel panel-default">
