--- a/work_blog/static/blog.css
+++ b/work_blog/static/blog.css
@@ -46,6 +46,13 @@ div.blog-content{
     margin-bottom: 2em;
     margin-top: 2em;
 }
+div.blog-content>p>img {
+    display: block !important;
+    max-width: 100% !important;
+    height: auto !important;
+    margin-right: auto !important;
+    margin-left: auto !important;
+}
 div.blog-more{
     margin-top: 1em;
 }
