--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -3,7 +3,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
@@ -161,11 +161,13 @@
         </div>
     </div>
     <footer class="fixed-bottom">
-        <span>
-            Welcome to visit my personal blog © 
-            <a href="{% url 'home' %}">{{ request.user.username }}</a>
-            个人开发,仅供交流
-        </span>
+        <div class="container-fluid">
+            <span>
+                Welcome to visit my personal blog © 
+                <a href="{% url 'home' %}">{{ request.user.username }}</a>
+                个人开发,仅供交流
+            </span>
+        </div>
     </footer>
     <script type="text/javascript">
         $(function(){
