--- a/work_blog/templates/blog_list.html
+++ b/work_blog/templates/blog_list.html
@@ -24,9 +24,13 @@
                                 <h3>
                                     <a href="{% url 'blog:blog_detail' blog.id %}">{{ blog.title }}</a>
                                 </h3>
-                                <p>{{ blog.content|striptags|truncatechars:100 }}&nbsp;
-                                    <a href="/admin/blog/blog/{{ blog.id }}/change/" target="_blank" style="text-decoration:underline;">编辑</a>
-                                </p>
+                                {% if request.user.is_superuser %}
+                                    <p>{{ blog.content|striptags|truncatechars:100 }}&nbsp;
+                                        <a href="/admin/blog/blog/{{ blog.id }}/change/" target="_blank" style="text-decoration:underline;">编辑</a>
+                                    </p>
+                                {% else %}
+                                    <p>{{ blog.content|striptags|truncatechars:100 }}&nbsp;</p>
+                                {% endif %}
                                 <br>
                                 <p class="blog-info">
                                     <!-- 图标引用 -->
