--- a/work_blog/templates/login.html
+++ b/work_blog/templates/login.html
@@ -8,7 +8,7 @@
 {% block nav_login_active %}active{% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div id="login_container" class="container">
         <div class="raw">
             <div class="col-xs-4 col-xs-offset-4">
                 {% if not user.is_authenticated %}
@@ -39,7 +39,7 @@
                     <span class="logout-skip">已登录,跳转到首页...<br>若无法自动跳转,<a href="{% url 'home' %}">请点击</a></span>
                     <script type="text/javascript">
                         // 设置延时函数,延时3s跳转
-                        setTimeout(function(){window.location.href='{% url 'home' %}'});
+                        setTimeout(function(){window.location.href='{% url 'home' %}'}, 30000);
                     </script>
                 {% endif %}
             </div>
