--- a/work_blog/templates/register.html
+++ b/work_blog/templates/register.html
@@ -7,7 +7,7 @@
 {% block nav_register_active %}active{% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div id="register_container" class="container">
         <div class="raw">
             <div class="col-xs-4 col-xs-offset-4">
                 {% if not user.is_authenticated %}
