--- a/work_blog/templates/blog_list.html
+++ b/work_blog/templates/blog_list.html
@@ -102,7 +102,7 @@
                 <!-- 分页显示 --> 
                 
             </div>
-            <div class="hidden-xs col-sm-4 col-md-3 col-lg-2">
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2">
             <!--博客分类-->
                 <div id="panel-right" class="panel panel-info">
                     <div class="panel-heading">
