--- a/work_blog/templates/home.html
+++ b/work_blog/templates/home.html
@@ -135,6 +135,7 @@
         // 图表配置
         var options = {
             chart: {
+                backgroundColor: 'rgba(255, 255, 255, 0.3)',
                 type: 'line'                        //指定图表的类型，默认是折线图（line）
             },
             title: {
