--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -16,7 +16,7 @@
     <div class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a href="{% url 'home' %}" class="navbar-brand">个人博客网站</a>
+                <a href="{% url 'home' %}" class="navbar-brand">非马梦衢的博客</a>
                 <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -119,8 +119,10 @@
 
                 <!-- 搜索功能框 -->
                 <div class="navbar-form navbar-right">
-                    <input id="search_keywords" type="text" class="form-control" data-value="blog" value="" placeholder="请输入搜索内容">
-                    <button id="jsSearchBtn" type="submit" class="btn btn-default">Go</button>
+                    <input id="search_keywords" type="text" class="form-control" data-value="blog" value="" placeholder="请输入搜索关键词">
+                    <button id="jsSearchBtn" type="submit" class="btn btn-default">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </button>
                 </div>
 
             </div>
@@ -164,7 +166,7 @@
         <div class="container-fluid">
             <span>
                 Welcome to visit my personal blog © 
-                <a href="{% url 'home' %}">{{ request.user.username }}</a>
+                <a href="{% url 'home' %}">非马梦衢</a>
                 个人开发,仅供交流
             </span>
         </div>
