--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -7,14 +7,22 @@
 
 {% block custom_css %}
     <link rel="stylesheet" type="text/css" href="{% static 'blog.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'brown_paper.css' %}">
+    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'brown_paper.css' %}"> {% endcomment %}
+    <link rel="stylesheet" type="text/css" href="{% static 'prism.css' %}">
 {% endblock custom_css %}
 
 {% block content %}
     <div id="blog_container" class="container">
         <div class="raw">
             <div class="col-xs-10 col-xs-offset-1">
-                <h3>{{ blog.title }}</h3>
+                {% if request.user.is_authenticated %}
+                    <h3>
+                        {{ blog.title }}
+                        <span style="float: right"><a href="/admin/blog/blog/{{ blog.id }}/change/" style="font-size:10px">【编辑】</a></span>
+                    </h3>
+                {% else %}
+                    <h3>{{ blog.title }}</h3>
+                {% endif %}
                 <ul class="blog-info-description">
                     <li>作者：{{ blog.author }}</li>
                     &nbsp;&nbsp;&nbsp;&nbsp;
@@ -39,6 +47,8 @@
                     <li>评论数({% get_comment_count blog %})</li>
                 </ul>
                 <div class="blog-content">{{ blog.content|safe }}</div>
+                
+
                 <!-- 点赞功能 -->
                 <div class="like" onclick="LikeChange(this, '{% get_content_type blog %}', {{ blog.id }})">
                     <span class="glyphicon glyphicon-thumbs-up {% get_like_status blog %}" title="点赞数"></span>
@@ -111,20 +121,22 @@
 
     
                                 {% for reply in comment.root_comment.all %}
-                                    <div class="reply">
-                                        <span>{{ reply.user.get_nickname_or_username }}</span>
-                                        <span>({{ reply.comment_time|date:'Y-m-d G:i:s' }})</span>
-                                        <span>回复</span>
-                                        <span>{{ reply.reply_to.get_nickname_or_username }}</span>
-                                        <div id="comment_{{ reply.pk }}" class="reply-comment">
-                                            {{ reply.text|safe }}
+                                    <blockquote>
+                                        <div class="reply">
+                                            <span>{{ reply.user.get_nickname_or_username }}</span>
+                                            <span>({{ reply.comment_time|date:'Y-m-d G:i:s' }})</span>
+                                            <span class="glyphicon glyphicon-share-alt"></span>
+                                            <span>{{ reply.reply_to.get_nickname_or_username }}</span>
+                                            <div id="comment_{{ reply.pk }}" class="reply-comment">
+                                                {{ reply.text|safe }}
+                                            </div>
+                                            <div class="like" onclick="LikeChange(this, '{% get_content_type reply %}', {{ reply.pk }})">
+                                                <span class="glyphicon glyphicon-thumbs-up {% get_like_status reply %}" title="点赞数"></span>
+                                                <span class="liked-num">{% get_liked_num reply %}</span>
+                                            </div>
+                                            <a href="javascript:reply({{ reply.pk }});">回复</a>
                                         </div>
-                                        <div class="like" onclick="LikeChange(this, '{% get_content_type reply %}', {{ reply.pk }})">
-                                            <span class="glyphicon glyphicon-thumbs-up {% get_like_status reply %}" title="点赞数"></span>
-                                            <span class="liked-num">{% get_liked_num reply %}</span>
-                                        </div>
-                                        <a href="javascript:reply({{ reply.pk }});">回复</a>
-                                    </div>
+                                    </blockquote>
                                 {% endfor %}
 
                             </div>
@@ -282,6 +294,7 @@
     </script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
-    <script type="text/javascript" src="{% static "highlight.pack.js" %}"></script>
+    <script type="text/javascript" src="{% static "ckeditor/ckeditor/plugins/prism/prism/lib/prism/prism_patched.min.js" %}"></script>
+    {% comment %} <script type="text/javascript" src="{% static "highlight.pack.js" %}"></script> {% endcomment %}
     <script>hljs.initHighlightingOnLoad();</script>
 {% endblock custom_js %}
