--- a/work_blog/templates/home.html
+++ b/work_blog/templates/home.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    我的网站|首页
+    非马梦衢的个人博客
 {% endblock title %}
 
 {% block custom_css %}
@@ -14,7 +14,10 @@
 
 {% block content %}
     <div class="body-header">
-        <h3 class="home-content">欢迎访问我的博客网站，随便看吧！</h3>
+        <h3 class="home-content">
+            <p>行亦禅，坐亦禅，落雪亦是禅；</p>
+            <p>心无挂碍，自得菩提！</p>
+        </h3>
     </div>
     <div id="home_container1" class="container">
         <div class="content-item">
@@ -47,13 +50,19 @@
                     <!-- Nav tabs -->
                     <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation" class="active">
-                            <a href="#home" aria-controls="home" role="tab" data-toggle="tab" style="font-size: 18px">趋势图</a>
+                            <a href="#home" aria-controls="home" role="tab" data-toggle="tab" style="font-size: 18px">
+                                <span class="glyphicon glyphicon-signal"></span>&nbsp;趋势图
+                            </a>
                         </li>
                         <li role="presentation">
-                            <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" style="font-size: 18px">Profile</a>
+                            <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab" style="font-size: 18px">
+                                <span class="glyphicon glyphicon-map-marker"></span>&nbsp;关于本站
+                            </a>
                         </li>
                         <li role="presentation">
-                            <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab" style="font-size: 18px">Messages</a>
+                            <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab" style="font-size: 18px">
+                                <span class="glyphicon glyphicon-sunglasses"></span>&nbsp;敬请期待
+                            </a>
                         </li>
                     </ul>
                     <!-- Tab panes -->
@@ -62,8 +71,12 @@
                             <!-- 图表容器 DOM -->
                             <div id="container"></div>
                         </div>
-                        <div role="tabpanel" class="tab-pane" id="profile">暂无内容</div>
-                        <div role="tabpanel" class="tab-pane" id="messages">暂无内容</div>
+                        <div role="tabpanel" class="tab-pane" id="profile">
+                            暂无内容
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="messages">
+                            暂无内容
+                        </div>
                     </div>
                 </div>
             </div>
@@ -77,6 +90,47 @@
                 <span class="glyphicon glyphicon-fire"></span>
                 <span style="font-size: 28px; font-weight: bolder">热读榜</span>
             </h3>
+
+            <div class="raw">
+                <div class="col-sm-4 col-sm-offset-1 hot-data">
+                    <div class="home-block">
+                        <!-- 今天24小时内的热门博客 -->
+                        <h4 class="home-block-title">最新博客发表</h4>
+                        <ul class="list">
+                            {% for new_blog in new_blogs %}
+                                <li>
+                                    <a href="{% url 'blog:blog_detail' new_blog.id %}"
+                                       target="_blank">{{ new_blog.title }}</a>
+                                    ({{ new_blog.get_blog_readnum }})
+                                </li>
+                            {% empty %}
+                                <li>暂时没有新博客发表</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-sm-offset-1 hot-data">
+                    <div class="home-block">
+                        <!-- 今天24小时内的热门博客 -->
+                        <h4 class="home-block-title">
+                            <span class="glyphicon glyphicon-sort-by-order"></span>&nbsp;热门排行
+                        </h4>
+                        <ul class="list">
+                            {% for blog, blog_readnum in blog_dict.items %}
+                                <li>
+                                    <a href="{% url 'blog:blog_detail' blog.id %}"
+                                       target="_blank">{{ blog.title }}</a>
+                                    ({{ blog_readnum }})
+                                </li>
+                            {% empty %}
+                                <li>今天暂时没有热门博客</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
             <div class="raw">
                 <div class="col-sm-4 hot-data">
                     <div class="home-block">
