--- a/work_blog/templates/blog_list.html
+++ b/work_blog/templates/blog_list.html
@@ -3,7 +3,7 @@
 {% load comment_tags %}
 {% load likes_tags %}
 
-{% block title %}我的博客网站{% endblock title %}
+{% block title %}非马梦衢的博客网站{% endblock title %}
 {% block nav_blog_active %}active{% endblock %}
 
 {% block custom_css %}
