--- a/work_blog/templates/home.html
+++ b/work_blog/templates/home.html
@@ -72,10 +72,12 @@
                             <div id="container"></div>
                         </div>
                         <div role="tabpanel" class="tab-pane" id="profile">
-                            暂无内容
+                            
+                            <p>博主正在努力丰富中，敬请关注。。。</p>
+                            
                         </div>
                         <div role="tabpanel" class="tab-pane" id="messages">
-                            暂无内容
+                            <p>博主正在努力丰富中，敬请关注。。。</p>
                         </div>
                     </div>
                 </div>
