--- a/work_blog/templates/login.html
+++ b/work_blog/templates/login.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    我的网站|登录
+    非马梦衢的网站|登录
 {% endblock title %}
 
 {% block nav_login_active %}active{% endblock %}
