--- a/work_blog/templates/register.html
+++ b/work_blog/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    我的网站|注册
+    非马梦衢的网站|注册
 {% endblock title %}
 
 {% block nav_register_active %}active{% endblock %}
