--- a/work_blog/templates/404.html
+++ b/work_blog/templates/404.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    我的网站|页面找不到
+    非马梦衢的网站|页面找不到
 {% endblock title %}
 
 {% block nav_home_active %}active{% endblock %}
