--- a/work_blog/templates/500.html
+++ b/work_blog/templates/500.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    我的网站|发生错误
+    非马梦衢的网站|发生错误
 {% endblock title %}
 
 {% block nav_home_active %}active{% endblock %}
