--- a/work_blog/templates/error.html
+++ b/work_blog/templates/error.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    我的网站|错误信息
+    非马梦衢的网站|错误信息
 {% endblock title %}
 
 {% block nav_home_active %}active{% endblock %}
