--- a/work_blog/templates/user_info.html
+++ b/work_blog/templates/user_info.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-    我的网站|个人信息
+    非马梦衢的网站|个人信息
 {% endblock title %}
 
 {% block custom_css %}
@@ -14,15 +14,23 @@
 {% block content %}
     <div id="user_info_container" class="container">
         <div class="raw">
-            <div class="col-xs-10 col-xs-offset-1">
+            <div class="col-xs-6 col-xs-offset-3">
                 {% if user.is_authenticated %}
-                    <h2>{{ user.username }}</h2>
-                    <ul>
-                        <li>昵称: {{ user.get_nickname }}&nbsp;<a href="{% url 'user:change_nickname' %}?from={{ request.get_full_path }}">修改昵称</a></li>
-                        <li>邮箱: {% if user.email %}{{ user.email }}{% else %}未绑定&nbsp;<a href="{% url 'user:bind_email' %}">绑定邮箱</a>{% endif %}</li>
-                        <li>上一次登录的时间: {{ user.last_login|date:'Y-m-d G:i:s' }}</li>
-                        <li><a href="{% url 'user:change_password' %}">修改密码</a></li>
-                    </ul>
+                    
+                    <div id="panel_info" class="panel panel-info">
+                        <div class="panel-heading">
+                            <span style="color: black">个人信息</span>
+                        </div>
+                        <div class="panel-body">
+                            <ul class="blog-types">
+                                <li>用户名： {{ user.username }}&nbsp;<a href="{% url 'user:change_password' %}">[修改密码]</a></li>
+                                <li>昵称： {{ user.get_nickname }}&nbsp;<a href="{% url 'user:change_nickname' %}?from={{ request.get_full_path }}">[修改昵称]</a></li>
+                                <li>邮箱： {% if user.email %}{{ user.email }}{% else %}未绑定&nbsp;<a href="{% url 'user:bind_email' %}">[绑定邮箱]</a>{% endif %}</li>
+                                <li>上一次登录的时间： {{ user.last_login|date:'Y-m-d G:i:s' }}</li>
+                            </ul>
+                        </div>
+                    </div>
+
                 {% else %}
                     <span class="logout-skip">未登录,跳转到首页...<br>若无法自动跳转,<a href="{% url 'home' %}">请点击</a></span>
                     <script type="text/javascript">
