--- a/work_blog/templates/login.html
+++ b/work_blog/templates/login.html
@@ -10,7 +10,7 @@
 {% block content %}
     <div id="login_container" class="container">
         <div class="raw">
-            <div class="col-xs-4 col-xs-offset-4">
+            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
                 {% if not user.is_authenticated %}
                     <div class="panel panel-default">
                         <div class="panel-heading">
