--- a/work_blog/templates/user_info.html
+++ b/work_blog/templates/user_info.html
@@ -14,7 +14,7 @@
 {% block content %}
     <div id="user_info_container" class="container">
         <div class="raw">
-            <div class="col-xs-6 col-xs-offset-3">
+            <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
                 {% if user.is_authenticated %}
                     
                     <div id="panel_info" class="panel panel-info">
