--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -32,7 +32,12 @@
                     </li>
                     <li class="{% block nav_blog_active %}{% endblock %}">
                         <a href="{% url 'blog:blog_list' %}">
-                            <span class="glyphicon glyphicon-pencil"></span>&nbsp;博客
+                            <span class="glyphicon glyphicon-book"></span>&nbsp;博客
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/admin/blog/blog/add/">
+                            <span class="glyphicon glyphicon-pencil"></span>&nbsp;新建
                         </a>
                     </li>
 
