--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -14,139 +14,175 @@
 {% block content %}
     <div id="blog_container" class="container">
         <div class="raw">
-            <div class="col-xs-10 col-xs-offset-1">
-                {% if request.user.is_authenticated %}
-                    <h3>
-                        {{ blog.title }}
-                        <span style="float: right"><a href="/admin/blog/blog/{{ blog.id }}/change/" style="font-size:10px">【编辑】</a></span>
-                    </h3>
-                {% else %}
-                    <h3>{{ blog.title }}</h3>
-                {% endif %}
-                <ul class="blog-info-description">
-                    <li>作者：{{ blog.author }}</li>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>分类:
-                        <a href="{% url 'blog:blogs_type' blog.blog_type.id %}"> 
-                            {{ blog.blog_type }}
-                        </a>
-                    </li>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>标签：
-                        {% for blog_tag in blog.tag.all %}
-                            <a href="{% url 'blog:blogs_tags' blog_tag.id %}">
-                                {{ blog_tag.name }}
-                            </a>
-                        {% endfor %}
-                    </li>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>发表日期：{{ blog.create_time|date:'Y-m-d G:i:s' }}</li>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>阅读数({{ blog.get_blog_readnum }})</li>
-                    &nbsp;&nbsp;&nbsp;&nbsp;
-                    <li>评论数({% get_comment_count blog %})</li>
-                </ul>
-                <div class="blog-content">{{ blog.content|safe }}</div>
-                
-
-                <!-- 点赞功能 -->
-                <div class="like" onclick="LikeChange(this, '{% get_content_type blog %}', {{ blog.id }})">
-                    <span class="glyphicon glyphicon-thumbs-up {% get_like_status blog %}" title="点赞数"></span>
-                    <span class="liked-num">{% get_liked_num blog %}</span>
-                    <span>喜欢</span>
-                </div>
-                <!-- 点赞功能 -->
-                <div class="blog-more">
-                    <p>上一篇:
-                        {% if pre_blog %}
-                            <a href="{% url 'blog:blog_detail' pre_blog.id %}">{{ pre_blog.title }}</a>
+            <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+                <div id="content_left">
+                    <div class="raw">
+                        {% if request.user.is_authenticated %}
+                            <h3>
+                                {{ blog.title }}
+                                <span style="float: right"><a href="/admin/blog/blog/{{ blog.id }}/change/"
+                                                              style="font-size:10px">【编辑】</a></span>
+                            </h3>
                         {% else %}
-                            没有更多了...
+                            <h3>{{ blog.title }}</h3>
                         {% endif %}
-                    </p>
-                    <p>下一篇:
-                        {% if next_blog %}
-                            <a href="{% url 'blog:blog_detail' next_blog.id %}">{{ next_blog.title }}</a>
-                        {% else %}
-                            没有更多了...
-                        {% endif %}
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="raw1">
-            <div class="col-xs-10 col-xs-offset-1">
-                <div class="comment-area">
-                    <h3 class="comment-area-title">提交评论</h3>
-                    {% if request.user.is_authenticated %}
-                        <!-- 表单提交 -->
-                        <form id="comment_form" action="{% url 'comment:upadte_comment' %}" method="POST" style="overflow:auto">
-                            <label for="comment_text">{{ request.user.get_nickname_or_username }},欢迎评论~</label>
-                            <div id="reply_content_container" style="display:none;">
-                                <p id="reply_title">回复:</p>
-                                <div id="reply_content"></div>
-                            </div>
-                            {% get_comment_form blog as comment_form %}
-                            {% for field in comment_form %}
-                                {{ field }}
-                            {% endfor %}
-                            <span id="comment_error" class="text-danger pull-left"></span>
-                            <input type="submit" value="评论" class="btn btn-primary pull-right">
-                            {% csrf_token %}
-                        </form>
-                    {% else %}
-                        您尚未登录,登录之后方可评论~
-                        <a class="btn btn-primary" href="{% url 'user:login' %}?from={{ request.get_full_path }}">登录</a>
-                        <span>or</span>
-                        <a class="btn btn-danger" href="{% url 'user:register' %}?from={{ request.get_full_path }}">注册</a>
-                    {% endif %}
-                </div>
-                <div class="comment-area">
-                    <h3 class="comment-area-title">评论列表</h3>
-                    <div id="comment_list">
-                        {% get_comment_list blog as comments %}
-                        {% for comment in comments %}
-                            <div id="root_{{ comment.pk }}" class="comment">
-                                <span style="color: #192f0a; font-weight:bold; font-style:italic; font-size:18px;">By</span>
-                                <span>{{ comment.user.get_nickname_or_username }}</span>
-                                <span>({{ comment.comment_time|date:'Y-m-d G:i:s' }}):</span>
-                                <div id="comment_{{ comment.pk }}" class="blog-comment">
-                                    {{ comment.text|safe }}
-                                </div>
-                                <div class="like" onclick="LikeChange(this, '{% get_content_type comment %}', {{ comment.pk }})">
-                                    <span class="glyphicon glyphicon-thumbs-up {% get_like_status comment %}" title="点赞数"></span>
-                                    <span class="liked-num">{% get_liked_num comment %}</span>
-                                </div>
-                                <a href="javascript:reply({{ comment.pk }});">回复</a>
-
-    
-                                {% for reply in comment.root_comment.all %}
-                                    <blockquote>
-                                        <div class="reply">
-                                            <span>{{ reply.user.get_nickname_or_username }}</span>
-                                            <span>({{ reply.comment_time|date:'Y-m-d G:i:s' }})</span>
-                                            <span class="glyphicon glyphicon-share-alt"></span>
-                                            <span>{{ reply.reply_to.get_nickname_or_username }}</span>
-                                            <div id="comment_{{ reply.pk }}" class="reply-comment">
-                                                {{ reply.text|safe }}
-                                            </div>
-                                            <div class="like" onclick="LikeChange(this, '{% get_content_type reply %}', {{ reply.pk }})">
-                                                <span class="glyphicon glyphicon-thumbs-up {% get_like_status reply %}" title="点赞数"></span>
-                                                <span class="liked-num">{% get_liked_num reply %}</span>
-                                            </div>
-                                            <a href="javascript:reply({{ reply.pk }});">回复</a>
-                                        </div>
-                                    </blockquote>
+                        <ul class="blog-info-description">
+                            <li>作者：{{ blog.author }}</li>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            <li>分类:
+                                <a href="{% url 'blog:blogs_type' blog.blog_type.id %}">
+                                    {{ blog.blog_type }}
+                                </a>
+                            </li>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            <li>标签：
+                                {% for blog_tag in blog.tag.all %}
+                                    <a href="{% url 'blog:blogs_tags' blog_tag.id %}">
+                                        {{ blog_tag.name }}
+                                    </a>
                                 {% endfor %}
+                            </li>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            <li>发表日期：{{ blog.create_time|date:'Y-m-d G:i:s' }}</li>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            <li>阅读数({{ blog.get_blog_readnum }})</li>
+                            &nbsp;&nbsp;&nbsp;&nbsp;
+                            <li>评论数({% get_comment_count blog %})</li>
+                        </ul>
+                        <div class="blog-content">{{ blog.content|safe }}</div>
 
+
+                        <!-- 点赞功能 -->
+                        <div class="like" onclick="LikeChange(this, '{% get_content_type blog %}', {{ blog.id }})">
+                            <span class="glyphicon glyphicon-thumbs-up {% get_like_status blog %}" title="点赞数"></span>
+                            <span class="liked-num">{% get_liked_num blog %}</span>
+                            <span>喜欢</span>
+                        </div>
+                        <!-- 点赞功能 -->
+                        <div class="blog-more">
+                            <p>上一篇:
+                                {% if pre_blog %}
+                                    <a href="{% url 'blog:blog_detail' pre_blog.id %}">{{ pre_blog.title }}</a>
+                                {% else %}
+                                    没有更多了...
+                                {% endif %}
+                            </p>
+                            <p>下一篇:
+                                {% if next_blog %}
+                                    <a href="{% url 'blog:blog_detail' next_blog.id %}">{{ next_blog.title }}</a>
+                                {% else %}
+                                    没有更多了...
+                                {% endif %}
+                            </p>
+                        </div>
+                    </div>
+                    <div class="raw">
+                        <div class="comment-area">
+                            <h3 class="comment-area-title">提交评论</h3>
+                            {% if request.user.is_authenticated %}
+                                <!-- 表单提交 -->
+                                <form id="comment_form" action="{% url 'comment:upadte_comment' %}" method="POST"
+                                      style="overflow:auto">
+                                    <label for="comment_text">{{ request.user.get_nickname_or_username }},欢迎评论~</label>
+                                    <div id="reply_content_container" style="display:none;">
+                                        <p id="reply_title">回复:</p>
+                                        <div id="reply_content"></div>
+                                    </div>
+                                    {% get_comment_form blog as comment_form %}
+                                    {% for field in comment_form %}
+                                        {{ field }}
+                                    {% endfor %}
+                                    <span id="comment_error" class="text-danger pull-left"></span>
+                                    <input type="submit" value="评论" class="btn btn-primary pull-right">
+                                    {% csrf_token %}
+                                </form>
+                            {% else %}
+                                您尚未登录,登录之后方可评论~
+                                <a class="btn btn-primary"
+                                   href="{% url 'user:login' %}?from={{ request.get_full_path }}">登录</a>
+                                <span>or</span>
+                                <a class="btn btn-danger"
+                                   href="{% url 'user:register' %}?from={{ request.get_full_path }}">注册</a>
+                            {% endif %}
+                        </div>
+                        <div class="comment-area">
+                            <h3 class="comment-area-title">评论列表</h3>
+                            <div id="comment_list">
+                                {% get_comment_list blog as comments %}
+                                {% for comment in comments %}
+                                    <div id="root_{{ comment.pk }}" class="comment">
+                                        <span style="color: #192f0a; font-weight:bold; font-style:italic; font-size:18px;">By</span>
+                                        <span>{{ comment.user.get_nickname_or_username }}</span>
+                                        <span>({{ comment.comment_time|date:'Y-m-d G:i:s' }}):</span>
+                                        <div id="comment_{{ comment.pk }}" class="blog-comment">
+                                            {{ comment.text|safe }}
+                                        </div>
+                                        <div class="like"
+                                             onclick="LikeChange(this, '{% get_content_type comment %}', {{ comment.pk }})">
+                                                <span class="glyphicon glyphicon-thumbs-up {% get_like_status comment %}"
+                                                      title="点赞数"></span>
+                                            <span class="liked-num">{% get_liked_num comment %}</span>
+                                        </div>
+                                        <a href="javascript:reply({{ comment.pk }});">回复</a>
+
+
+                                        {% for reply in comment.root_comment.all %}
+                                            <blockquote>
+                                                <div class="reply">
+                                                    <span>{{ reply.user.get_nickname_or_username }}</span>
+                                                    <span>({{ reply.comment_time|date:'Y-m-d G:i:s' }})</span>
+                                                    <span class="glyphicon glyphicon-share-alt"></span>
+                                                    <span>{{ reply.reply_to.get_nickname_or_username }}</span>
+                                                    <div id="comment_{{ reply.pk }}" class="reply-comment">
+                                                        {{ reply.text|safe }}
+                                                    </div>
+                                                    <div class="like"
+                                                         onclick="LikeChange(this, '{% get_content_type reply %}', {{ reply.pk }})">
+                                                            <span class="glyphicon glyphicon-thumbs-up {% get_like_status reply %}"
+                                                                  title="点赞数"></span>
+                                                        <span class="liked-num">{% get_liked_num reply %}</span>
+                                                    </div>
+                                                    <a href="javascript:reply({{ reply.pk }});">回复</a>
+                                                </div>
+                                            </blockquote>
+                                        {% endfor %}
+
+                                    </div>
+                                {% empty %}
+                                    <span id="no_comment">暂无评论</span>
+                                {% endfor %}
                             </div>
-                        {% empty %}
-                            <span id="no_comment">暂无评论</span>
-                        {% endfor %}
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+                <div id="content_right" class="side-list">
+                    <h3>
+                        <span class="glyphicon glyphicon-book"></span>
+                        随机推荐
+                    </h3>
+                    <ul>
+                        {% for rand_blog in rand_blogs %}
+                            <li>
+                                <a href="{% url 'blog:blog_detail' rand_blog.id %}" target="_blank">{{ rand_blog.title }}</a>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+
+                <div id="content_right" class="side-list">
+                    <h3>
+                        <span class="glyphicon glyphicon-book"></span>
+                        猜你喜欢
+                    </h3>
+                    <ul id="like_blogs_list">
+                        <li>猜测中，请稍等...</li>
+                    </ul>
+                </div>
+            </div>
         </div>
+
         
     </div>
     
