--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -331,6 +331,7 @@
     <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
     <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
     <script type="text/javascript" src="{% static "prism_patched.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "prism.js" %}"></script>
     {% comment %} <script type="text/javascript" src="{% static "highlight.pack.js" %}"></script> {% endcomment %}
     <script>hljs.initHighlightingOnLoad();</script>
 {% endblock custom_js %}
