--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -173,6 +173,8 @@
                 Welcome to visit my personal blog © 
                 <a href="{% url 'home' %}">非马梦衢</a>
                 个人开发,仅供交流
+                <img src="{% static 'icp.png' %}" alt="icp" width="18" height="20">
+                <a href="http://www.miibeian.gov.cn/">豫ICP备18044504号</a>
             </span>
         </div>
     </footer>
