--- a/work_blog/templates/blog_detail.html
+++ b/work_blog/templates/blog_detail.html
@@ -333,5 +333,5 @@
     <script type="text/javascript" src="{% static "prism_patched.min.js" %}"></script>
     <script type="text/javascript" src="{% static "prism.js" %}"></script>
     {% comment %} <script type="text/javascript" src="{% static "highlight.pack.js" %}"></script> {% endcomment %}
-    <script>hljs.initHighlightingOnLoad();</script>
+{#    <script>hljs.initHighlightingOnLoad();</script>#}
 {% endblock custom_js %}
