--- a/work_blog/templates/base.html
+++ b/work_blog/templates/base.html
@@ -105,6 +105,11 @@
                                             <span class="glyphicon glyphicon-cog"></span>&nbsp;后台管理
                                         </a>
                                     </li>
+                                    <li>
+                                        <a href="{% url 'home' %}api/v1/">
+                                            <span class="glyphicon glyphicon-leaf"></span>&nbsp;Rest API
+                                        </a>
+                                    </li>
                                 {% endif %}
                                 <li>
                                     <a href="{% url 'user:change_password' %}">
